bugfix: text-align list product

--- a/src/app/product/list-all/list-all.component.sass
+++ b/src/app/product/list-all/list-all.component.sass
@@ -28,6 +28,7 @@ table tr
 
 table th, table td
   padding: .25em
+  text-align: start
 
 .modal-wrapper
   position: absolute
